# probs-ontology

./: .buildinfo  .envrc  .gitignore  CHANGELOG.md  CITATION.cff  DEVELOPING.md  LICENSE  MANIFEST.in  README.md  classification_codes.html  composition_equivalence.html  dodo.py  environment.yml  genindex.html  inferred_observations.html  intro.html  objects.inv  observations.html  provenance.html  pyproject.toml  references.html  search.html  searchindex.js  setup.cfg  system.html
.github/workflows/: build.yml  jupyterbook.yml
_sources/: classification_codes.md  inferred_observations.md  intro.md
_sources/reasoning/: intro.md
conversion/: convert_ontology.py  pyproject.toml
conversion/additional_ontologies/: UK.ttl  time_periods.ttl
data/: README.md
docs/: _config.yml  _toc.yml  composition_equivalence.md  observations.md  provenance.md  references.bib  system.md
docs/reasoning/: intro.md
ontology/: UK.rdf  probs.ttl  qualitykind.ttl  qudt_quantitykind.ttl  time_periods.ttl
probs_ontology/: __init__.py  additional_info.ttl  probs.fss  probs.ttl
probs_ontology/runner/: LICENSE  datasource.py  namespace.py  probs_runner.py
probs_ontology/scripts/conversion/: init.rdfox  master.rdfox  rules.dlog  save_data.rdfox  unit_conversion.dlog
probs_ontology/scripts/ontology2ffs/: convert.rdfox  init.rdfox  master.rdfox
probs_ontology/scripts/reasoning/: init.rdfox  load_data.rdfox  master.rdfox  rules.dlog
reasoning/: intro.html
release/: README.md
release/2.0.0/: 406.html  index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
release/2.0.0/provenance/: provenance-en.html  provenance-en.ttl
release/2.0.0/sections/: abstract-en.html  crossref-en.html  description-en.html  introduction-en.html  ns-en.html  overview-en.html  references-en.html
tests/: README.md  conftest.py  test_composition_equivalence_together.py  test_comtrade.py  test_observations_basic.py  test_observations_stress.py
tests/runner/: test_datasource.py  test_probs_runner.py
tests/runner/sample_datasource_simple/: data.csv  load_data.rdfox  map.dlog
tests/testing_datasources/COMTRADE/: map.dlog  (+3 more)
(+14 files in other folders)
