[metadata]
name = probs_ontology
version = 1.5.2
description = Ontology files and RDFox scripts for the PRObs ontology
author = Stefano Germano, Carla Saunders, Rick Lupton
author-email = mail@ricklupton.name
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/ukfires/probs-ontology
platforms = any

[options]
packages = probs_ontology
include_package_data = True

[bdist_wheel]
universal=1

[options.extras_require]
test=
  pytest
  probs_runner
docs=
  jupyter-book >=0.10,<0.11
