[project]
# This is the name of the Python distribution, for consistency with the other
# modules which supply files in the "probs_system" namespace.
name = "probs_module_ontology"
version = "2.0.0a1"
description = "Ontology files for the PRObs ontology"
authors = [
    {name = "Stefano Germano"},
    {name = "Rick Lupton"},
    {name = "Carla Saunders"},
]
readme = "README.md"
dependencies = []

[project.urls]
Repository = "https://github.com/probs-lab/probs-ontology"

[tool.setuptools]
package-dir = {"probs_system.data" = "data"}

[tool.setuptools.package-data]
"probs_system.data" = ["*.nt.gz", "*.dlog"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
